2006-06-28  Roger Leigh  <rleigh@debian.org>

	* TODO: Remove completed items.

	* schroot/schroot-base-main.cc
	(run): This method takes argc and argv arguments, and calls the
	option class parse method.  It also catches and handles parse
	exceptions.

	* schroot/schroot-base-option.cc
	(parse): Renamed from parse_options, this method now takes argc
	and argv as arguments and calls all the other class virtual
	methods to set up and process the options.
	(add_option_group): New virtual method.  The addition of option
	groups is split out from the parse method.

	* All option parsing classes have removed the argc and argv
	arguments from their constructors.  The constructors now no longer
	call any of the virtual methods.

2006-06-28  Roger Leigh  <rleigh@debian.org>

	* schroot/schroot-listmounts-options.cc: Add set_action method to
	ensure only one action is specified.

	* schroot/schroot-releaselock-options.cc: Add set_action method to
	ensure only one action is specified.

2006-06-28  Roger Leigh  <rleigh@debian.org>

	* dchroot-dsa/dchroot-dsa-main.cc: Use new constructor argmuments,
	and chain up to the new parent class.

	* dchroot-dsa/dchroot-dsa-options.cc: Remove help check, which is
	handled in the base class.  Handle help action in sanity checks.

	* dchroot/dchroot-main.cc: Use new constructor argmuments, and
	chain up to the new parent class.

	* dchroot/dchroot-main-base.(cc|h): Derive from
	schroot::main_base.

	* dchroot/dchroot-options.cc: Remove help check, which is handled
	in the base class.

	* schroot/schroot-main.(cc|h): Derive from main_base.  Remove
	functionality moved to the base class.

	* schroot/schroot-options-base.(cc|h): Derive from
	schroot_base::options.  Remove functionality moved to the base
	class.  Add help action.

	* schroot/schroot-options.cc: Remove help check, which is handled
	in the base class.

	* schroot/schroot-listmounts.cc: Move functionality into
	schroot_listmounts::main.
