@@ -23,8 +23,6 @@
 #include "dchroot-dsa-options.h"
 
 #include <cstdlib>
-#include <iostream>
-#include <locale>
 
 #include <boost/format.hpp>
 
@@ -49,23 +47,9 @@ main (int   argc,
 {
   try
     {
-      // Set up locale.
-      std::locale::global(std::locale(""));
-      std::cout.imbue(std::locale());
-      std::cerr.imbue(std::locale());
-
       dchroot_dsa::options::ptr opts(new dchroot_dsa::options);
       dchroot_dsa::main kit(opts);
       exit (kit.run(argc, argv));
-    }
-  catch (boost::program_options::error const& e)
-    {
-      sbuild::log_error() << e.what() << endl;
-      sbuild::log_info()
-	<< format(_("Run \"%1% --help\" to list usage example and all available options"))
-	% argv[0]
-	<< endl;
-      exit(EXIT_FAILURE);
     }
   catch (std::exception const& e)
     {
